--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,83 @@
 .App {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     /* background-color: green; */
     font-family: 'Lato', sans-serif;
+    background-color: #F9F9F9;
+}
+
+.App-header {
+    background-color: #363331;
+    height: 86px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.header-left-container {
+    height: 100%;
+    color: #67625F;
+    display: flex;
+    width: 300px;
+    justify-content: space-around;
 }
 
 .App-title {
-    text-align: center;
-    padding-top: 50px;
-    margin-bottom: 30px;
-    font-size: 28px;
+    font-size: 21px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.title-search {
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.user-profile-container {
+    height: 100%;
+    width: 70px;
+    display: flex;
+    align-items: center;
+}
+
+.user-profile-pic {
+    width: 45px;
+    height: 45px;
+    border-radius: 50px;
+}
+
+.nav-container {
+    background-color: #2B2826;
+    color: #67625F;
+    height: 60px;
+    margin-bottom: 50px;
 }
 
 .button-container {
-    text-align: center;
-    margin-bottom: 30px;
+    display: flex;
+    height: 100%;
+    width: 300px;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.nav-button {
+    height: 100%;
+    padding: 0 15px;
+}
+
+.nav-button p {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.selected {
+    color: #F18432;
+    border-bottom: 2px solid #F18432;
 }
 
 .main-content-container {
