--- a/src/Components/RandomBank/RandomQuestions/RandomQuestions.css
+++ b/src/Components/RandomBank/RandomQuestions/RandomQuestions.css
@@ -4,3 +4,21 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+.progress-bar-container {
+    width: 100%;
+    margin: 25px auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.progress-bar-percentage {
+    font-size: 12px;
+    color: #F18432;
+}
+
+.progress-bar {
+    width: 90%;
+    height: 5px;
+}
