--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@
     background-color: #2B2826;
     color: #67625F;
     height: 60px;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 }
 
 .button-container {
@@ -82,6 +82,6 @@
 
 .main-content-container {
     text-align: center;
-    width: 80%;
+    /* width: 80%; */
     margin: 0 auto;
 }
