--- a/src/Components/RandomBank/RandomQuestions/RandomQuestions.css
+++ b/src/Components/RandomBank/RandomQuestions/RandomQuestions.css
@@ -1,13 +1,33 @@
 .Random-Questions-Container {
-    width: 100%;
+    width: 80%;
     height: 100%;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
 }
 
+.refresh-container {
+    display: flex;
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+.refresh-button {
+    background-color: #FBFBFB;
+    color: #D8D8D8;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 30px;
+    box-shadow: 2px 8px 8px 3px rgba(232,232,232,1);
+}
+
 .progress-bar-container {
     width: 100%;
-    margin: 25px auto;
+    margin: 25% auto;
     display: flex;
     justify-content: space-around;
     align-items: center;
